# FRacing

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
lib/: Makefile.am  Makefile.in
lib/common/: list.h
lib/configini/: Makefile.am  Makefile.in
lib/cssl/: Makefile.am  Makefile.in  cssl.c
lib/framebuffer/: Makefile.am  Makefile.in  fbbutton.c  fbbutton.h  framebuffer.c
src/: Makefile.am  Makefile.in  main.c
test/: Makefile.am  Makefile.in  config_test.c  fb_test.c  fracing.cfg
