#
#  FRacing/lib/configuration/Makefile.am
#
#  Copyright (C) 2015 Ikhyun Kim.
#
# This file is placed under the GPL.  Please see the file
# COPYING for more details.
#
#

lib_LTLIBRARIES = libfrconfigini.la
libfrconfigini_la_CFLAGS = -I$(top_srcdir)/lib/common
libfrconfigini_la_SOURCES = configini.c

