#
#  FRacing/lib/configuration/Makefile.am
#
#  Copyright (C) 2015 Ikhyun Kim.
#
# This file is placed under the GPL.  Please see the file
# COPYING for more details.
#
#

lib_LTLIBRARIES = libfrframebuffer.la
libfrframebuffer_la_CFLAGS = -I$(top_srcdir)/lib/common
libfrframebuffer_la_SOURCES = font_8x8.c font_8x16.c framebuffer.c fbbutton.c

